; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_header_size.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_header_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@index_version = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @header_size() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @index_version, align 4
  %3 = icmp eq i32 %2, 1
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @index_version, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4, %0
  store i32 4, i32* %1, align 4
  br label %22

8:                                                ; preds = %4
  %9 = load i32, i32* @index_version, align 4
  %10 = icmp eq i32 %9, 2
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 4, i32* %1, align 4
  br label %22

12:                                               ; preds = %8
  %13 = load i32, i32* @index_version, align 4
  %14 = icmp eq i32 %13, 3
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 4, i32* %1, align 4
  br label %22

16:                                               ; preds = %12
  %17 = load i32, i32* @index_version, align 4
  %18 = icmp eq i32 %17, 4
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 4, i32* %1, align 4
  br label %22

20:                                               ; preds = %16
  %21 = call i32 @assert(i32 0)
  store i32 0, i32* %1, align 4
  br label %22

22:                                               ; preds = %20, %19, %15, %11, %7
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
